<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bean_paste_green" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/login_user"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_user"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="loginAction"
                android:text="@string/login" />

            <Button
                android:id="@+id/register_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="registerAction"
                android:text="@string/register" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>